Added url to database and other changes
