# build/resources/main/api-definition.yml
@@ -66,9 +66,8 @@ definitions:
       type:
         type: string
         enum:
-          - category1
-          - category2
-          - category3
+          - event
+          - project
       date:
         type: string
       endDate:
